# talk-rs

./: Cargo.toml  readme.adoc
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: adr.yaml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md  standard.md
src/: main.rs
src/talk/: mod.rs
src/talk/adapter/grpc/: mod.rs
src/talk/adapter/http/: mod.rs
src/talk/entity/: mod.rs
src/usecase/: mod.rs
