[package]
name = "echo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.10.0", features = ["attributes"] }
env_logger = "0.9.0"
futures-util = "0.3.19"
log = "0.4.14"
ntex = { version = "0.5.10", features = ["async-std"] }
strum_macros = "0.23.1"
